...
    func createSampleResults() -> [MKMapItem] {
        
        // TODO: - Add more items to array
        
        let address = [
            CNPostalAddressStreetKey: "Royal Observatory, Blackheath Avenue",
            CNPostalAddressCityKey: "London",
            CNPostalAddressPostalCodeKey: "SE10 8XJ",
            CNPostalAddressISOCountryCodeKey: "GB"
        ]
        
        let placemark = MKPlacemark(
            coordinate: CLLocationCoordinate2DMake(51.476833, 0.0),
...
